修复一些已知问题